# Polynoms---Ex3

./: CMakeLists.txt  README.txt
include/: List.h  Node.h  Poly.h  Rational.h
src/: CMakeLists.txt  List.cpp  Node.cpp  Poly.cpp  Rational.cpp  main.cpp
